Modification de l'algorithme pour pouvoir récupérer tous les motifs calculés

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <script src="executeKMR.js" defer></script>
 </head>
 <body>
-    <input type="text" id="string" placeholder="Entrez votre chaine de caractères ici">
+    <input type="text" id="sequence" placeholder="Entrez votre chaine de caractères ici">
     <button id="validation-button">Chercher des motifs</button>
+    <p id="print-sequence"></p>
+    <div id="algo-results"></div>
 </body>
 </html>
