Premiers tests de performances, comparaison KMR/algo naïf

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="style.css" rel="stylesheet">
 
     <script src="kmr.js" defer></script>
+    <script src="naif.js" defer></script>
     <script src="executeKMR.js" defer></script>
 </head>
 <body>
