upgrade of charttest

--- a/charttest/testChart.html
+++ b/charttest/testChart.html
@@ -15,7 +15,10 @@
 </head>
 <body>
     <h1>Graph</h1>
-    <div id="d"><canvas id="line" width="150" height="100"></canvas></div>
+    <div id="d"><canvas id="line" width="150" height="100"></canvas>
+    <button id="LineButton" onclick="removeData(oui)">Remove Data</button>
+    <button id="LineButton" onclick="restoreData(oui)">Restore Data</button>
+    </div>
 
     <p>youpi</p>
 
