--- a/testKMR.html
+++ b/testKMR.html
@@ -8,9 +8,9 @@
 
     <link href="style.css" rel="stylesheet">
 
-    <script src="kmr.js" defer></script>
-    <script src="naif.js" defer></script>
-    <script src="executeKMR.js" defer></script>
+    <script src="js/kmr.js" defer></script>
+    <script src="js/naif.js" defer></script>
+    <script src="js/executeKMR.js" defer></script>
 </head>
 <body>
     <input type="text" id="sequence" placeholder="Entrez votre chaine de caractères ici">
