--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </header>
 
   <div class="site">
-    <div class="navi navsticky">
+    <div class="navsticky">
       <nav class="navi">
         <div class="pre">
           <a href="#presentation">1</a>
@@ -50,62 +50,73 @@
     <div class="content">
       <article class="presentation" id="presentation">
         <h2>L'algorithme KMR</h2>
-        <h4>Introduction</h4> <br>
-        L'algorithme KMR, porte le nom de ses concepteurs Karp, Miller et Rosenberg, 
-        c'est un algorithme de détection de répétition de motifs dans une structure de donnée 
-        (chaine de caractères, tableau, arbres). Ici notre algorithme fonctionne sur les chaines de 
-        caractères et renvoie le plus grand facteur répété. <br>
-         
-        <h4>Fonctionnement :</h4> <br>
-        L'algorithme se déroule de la manière suivante : Il va tout dabord chercher les motifs répétés
-        de taille 1, afin de récupérer l'alphabet de la chaine passé en paramètre. Chaque élément de cet 
-        alphabet va être mit dans une "classe". Nous aurons donc une classe pour chaque caractères.
-        L'algorithme va ensuite doublé la taille des motifs répétés à chercher, il va maintenant 
-        regarder si il y a des motifs répétés de taille 2. Et comme précédement les mettre dans des 
-        "classes", nous répétons cette opération jusqu'à ne plus trouver de motifs répété.
-        Mais ce n'est pas fini! Comme nous avons doublé à chaque fois la taille des motifs à chercher,
-        nous devons regarder entre la taille des plus grands motifs déjà trouvé et celle de ceux 
-        où nous avons rien trouvé. <br> 
-        <br>
-        petit exemple pour illustrer : Si nous prenons le mot "MONTONTON" et que nous appliquons 
-        l'algorithme : <br>
-        V = le tableau des classes. <br>
-        1 - V ={ {M} , {O} , {N} ,{T} } motifs de taille 1, <br>
-        2 - V ={ {ON} , {NT} , {TO} } motifs de taille 2, <br>
-        3 - V ={ {ONTO} , {NTON} } motifs de taille 4, <br>
-        4 - ERREUR pas de motifs de taille 8 répétés. <br>
-        <br>
-        A partir de cette instant nous allons chercher si il existe des motifs de répétés de 
-        taille entre 4 et 8. Et pour cela quoi de mieux que la recherche par dichotomie ! Le fameux 
-        "diviser pour régner" ! <br>
-        Donc comme nous savons qu'il existe des motifs répétés de taille 4, mais pas de taille 8, 
-        on prend donc le juste millieu soit 6. Nous cherchons si il en existe, si oui on cherchera 
-        au-dessus de 6, sinon en-dessous et ainsi de suite. <br>
-        Si nous continuons notre exemple, nous avons : <br>
-        5 - ERREUR pas de motifs de taille 6 répétés, <br>
-        6 - V = { {ONTON} } motifs de taille 5. <br>
-        <br>
-        C'est bon notre algorithme s'arrête. Nous avons trouvé le motif répété le plus grand : "ONTON".
-        C'est ainsi que fonctionne grossièrement un algorithme KMR.
-        <br>
-        <h4>Où est utilisé l'algo KMR ?</h4> <br>
-
-        Cet algorithme est utilisé dans le secteur de la bio-informatique, d'ADN.
-        
-        <br>
-        <h4>Parlons complexité !</h4>
-        <br>
-
-
-
+        <div class="algoText">
+          <h4>Introduction</h4>
+          <p>
+            L'algorithme KMR, portant le nom de ses concepteurs Karp, Miller et Rosenberg, 
+            est un algorithme de détection de répétition de motifs dans une structure de donnée 
+            (chaine de caractères, tableau, arbres). Ici notre algorithme fonctionne sur les chaines de 
+            caractères et renvoie le plus grand facteur répété.
+          </p>
+          <h4>Fonctionnement :</h4>
+          <p>
+            L'algorithme se déroule de la manière suivante : Il va tout dabord chercher les motifs répétés
+            de taille 1, afin de récupérer l'alphabet de la chaine passé en paramètre. Chaque élément de cet 
+            alphabet va être mit dans une "classe". Nous aurons donc une classe pour chaque caractères.
+            L'algorithme va ensuite doublé la taille des motifs répétés à chercher, il va maintenant 
+            regarder si il y a des motifs répétés de taille 2. Et comme précédement les mettre dans des 
+            "classes", nous répétons cette opération jusqu'à ne plus trouver de motifs répété.
+            Mais ce n'est pas fini! Comme nous avons doublé à chaque fois la taille des motifs à chercher,
+            nous devons regarder entre la taille des plus grands motifs déjà trouvé et celle de ceux 
+            où nous avons rien trouvé.
+          </p>
+          <p>
+            petit exemple pour illustrer : Si nous prenons le mot "MONTONTON" et que nous appliquons 
+            l'algorithme : <br>
+            V = le tableau des classes. <br>
+            1 - V ={ {M} , {O} , {N} ,{T} } motifs de taille 1, <br>
+            2 - V ={ {ON} , {NT} , {TO} } motifs de taille 2, <br>
+            3 - V ={ {ONTO} , {NTON} } motifs de taille 4, <br>
+            4 - ERREUR pas de motifs de taille 8 répétés.
+          </p>
+          <p>
+            A partir de cette instant nous allons chercher s'il existe des motifs de répétés de 
+            taille entre 4 et 8. Et pour cela quoi de mieux que la recherche par dichotomie ! Le fameux 
+            "diviser pour régner" ! <br>
+            Donc comme nous savons qu'il existe des motifs répétés de taille 4, mais pas de taille 8, 
+            on prend donc le juste millieu soit 6. Nous cherchons si il en existe, si oui on cherchera 
+            au-dessus de 6, sinon en-dessous et ainsi de suite. <br>
+            Si nous continuons notre exemple, nous avons : <br>
+            5 - ERREUR pas de motifs de taille 6 répétés, <br>
+            6 - V = { {ONTON} } motifs de taille 5.
+          </p>
+          <p>
+            C'est bon notre algorithme s'arrête. Nous avons trouvé le motif répété le plus grand : "ONTON".
+            C'est ainsi que fonctionne grossièrement un algorithme KMR.
+          </p>
+          <h4>Où est utilisé l'algo KMR ?</h4>
+          <p>
+            Cet algorithme est utilisé dans le secteur de la bio-informatique, pour l'analyse de
+            répétitions dans des séquences d'acides aminés, par exemple au sein de structures protéiques.
+            L'algorithme de Karp-Miller-Rosenberg peut également être utilisé pour l'analyse d'image
+            bidimensionnelle, notamment les repliements de protéines dans un espace à trois dimensions.
+          </p>
+          <h4>Parlons complexité !</h4>
+          <p>
+            La complexité en temps dans le pire des cas de notre implémentation de l'algorithme KMR est
+            O(n² log(n)). Sa complexité en espace est de O(n).
+          </p>
+        </div>
       </article>
 
       <article class="implementation" id="implementation">
         <h2>Testez-vous même l'algorihme !</h2>
-        <input type="text" class="sequence" placeholder="Entrez votre chaine de caractères ici">
-        <button class="validation-button">Chercher des motifs</button>
-        <p class="print-sequence"></p>
-        <div class="algo-results"></div>
+        <div class="testAlgoResult">
+          <input type="text" class="sequence" placeholder="Entrez votre chaine de caractères ici">
+          <button class="validation-button">Chercher des motifs</button>
+          <p class="print-sequence"></p>
+          <div class="algo-results"></div>
+        </div>
       </article>
 
       <article class="perf" id="perf">
@@ -190,5 +201,9 @@
       </article>
     </div>
   </div>
+
+  <footer>
+    <p>Projet réalisé par Paul Bunel et Julien Lebaron</p>
+  </footer>
 </body>
 </html>
